// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Staff should render a half note 1`] = `
Array [
  <mask
    id="noteHeadMask676"
    maskContentUnits="userSpaceOnUse"
    maskUnits="userSpaceOnUse"
  >
    <rect
      fill="white"
      height={145}
      width={97}
      x={49}
      y={109}
    />
    <ellipse
      cx={67}
      cy={123}
      fill="black"
      rx={13}
      ry={8}
      transform="rotate(-30, 20, 20)"
    />
  </mask>,
  <ellipse
    className="note__head"
    cx={67}
    cy={123}
    fill="yellow"
    mask="url(#noteHeadMask676)"
    rx={15}
    ry={11}
    stroke="red"
    strokeOpacity={1}
    strokeWidth={5}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={50}
    y={29}
  />,
]
`;

exports[`Staff should render a single chord 1`] = `
<div
  className="staff"
>
  <svg
    className="staff"
    height="300"
    width={200}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      className="staff__line"
      height="4"
      width={200}
      x={0}
      y={61}
    />
    <rect
      className="staff__line"
      height="4"
      width={200}
      x={0}
      y={85}
    />
    <rect
      className="staff__line"
      height="4"
      width={200}
      x={0}
      y={109}
    />
    <rect
      className="staff__line"
      height="4"
      width={200}
      x={0}
      y={133}
    />
    <rect
      className="staff__line"
      height="4"
      width={200}
      x={0}
      y={157}
    />
    <mask
      id="noteHeadMask676"
      maskContentUnits="userSpaceOnUse"
      maskUnits="userSpaceOnUse"
    >
      <rect
        fill="white"
        height={145}
        width={97}
        x={49}
        y={109}
      />
      <ellipse
        cx={67}
        cy={123}
        fill="black"
        rx={13}
        ry={8}
        transform="rotate(-30, 20, 20)"
      />
    </mask>
    <ellipse
      className="note__head"
      cx={67}
      cy={123}
      fill="yellow"
      mask="url(#noteHeadMask676)"
      rx={15}
      ry={11}
      stroke="red"
      strokeOpacity={1}
      strokeWidth={5}
    />
    <rect
      className="staff__line"
      height={91}
      width={4}
      x={50}
      y={29}
    />
  </svg>
</div>
`;

exports[`Staff should render empty staff 1`] = `
<div
  className="staff"
>
  <svg
    className="staff"
    height="300"
    width={100}
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      className="staff__line"
      height="4"
      width={100}
      x={0}
      y={61}
    />
    <rect
      className="staff__line"
      height="4"
      width={100}
      x={0}
      y={85}
    />
    <rect
      className="staff__line"
      height="4"
      width={100}
      x={0}
      y={109}
    />
    <rect
      className="staff__line"
      height="4"
      width={100}
      x={0}
      y={133}
    />
    <rect
      className="staff__line"
      height="4"
      width={100}
      x={0}
      y={157}
    />
  </svg>
</div>
`;
